# anomalyshield

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: sample_data.csv
data/: datasets.py
notebooks/: 01_exploration.ipynb  02_detection_methods.ipynb  03_evaluation.ipynb
src/: __init__.py  detector.py  utils.py
src/data/: __init__.py  loader.py  preprocessor.py  sources.py
src/models/: __init__.py  autoencoder.py  elliptic_envelope.py  isolation_forest.py  lof.py  prophet_model.py
src/visualization/: __init__.py  dashboard.py  plots.py
tests/: test_data.py  test_detector.py  test_models.py
