[project]
name = "anomalyshield"
version = "0.1.0"
description = "Time series anomaly detection platform — multiple methods, interactive visualization, and forecasting."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
